First go at access control with Google

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -26,6 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <a href="/auth/google">Sign In with Google</a>
     <div class="container" ng-view=""></div>
 
     <script src="bower_components/jquery/jquery.js"></script>
