--- a/static/app/index.html
+++ b/static/app/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <a href="/auth/google">Sign In with Google</a>
+    <fui-access></fui-access>
     <div class="container" ng-view=""></div>
 
     <script src="bower_components/jquery/jquery.js"></script>
@@ -69,6 +69,8 @@
         <script src="scripts/directives/fuiEditable.js"></script>
         <script src="scripts/services/lStore.js"></script>
         <script src="scripts/services/localeDateTime.js"></script>
+        <script src="scripts/directives/fuiAccess.js"></script>
+        <script src="scripts/services/isLoggedIn.js"></script>
         <!-- endbuild -->
 </body>
 </html>
