--- a/static/app/index.html
+++ b/static/app/index.html
@@ -47,6 +47,8 @@
         <script src="bower_components/d3-cloud/lib/d3/d3.js"></script>
         <script src="bower_components/d3-cloud/d3.layout.cloud.js"></script>
         <script src="bower_components/momentjs/moment.js"></script>
+        <!-- @TODO: change the address to socket.io -->
+        <script src="http://localhost:3000/socket.io/socket.io.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
@@ -63,10 +65,12 @@
         <script src="scripts/services/tickets.js"></script>
         <script src="scripts/services/wordcloud.js"></script>
         <script src="scripts/services/retrospectives.js"></script>
+        <script src="scripts/services/socket.js"></script>"
         <script src="scripts/controllers/wordcloud.js"></script>
         <script src="scripts/controllers/retrospectives.js"></script>
         <script src="scripts/controllers/board.js"></script>
         <script src="scripts/controllers/tickets.js"></script>
+        <script src="scripts/controllers/events.js"></script>
         <script src="scripts/directives/fuiEditable.js"></script>
         <script src="scripts/services/lStore.js"></script>
         <!-- endbuild -->
