--- a/static/app/index.html
+++ b/static/app/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html ng-app="retrospectApp" ng-controller="MainCtrl" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html ng-app="retrospectApp" ng-controller="MainCtrl" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html ng-app="retrospectApp" ng-controller="MainCtrl" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html ng-app="retrospectApp" ng-controller="MainCtrl" class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>{{ Page.title }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -65,6 +65,8 @@
         <script src="scripts/services/tickets.js"></script>
         <script src="scripts/services/wordcloud.js"></script>
         <script src="scripts/services/retrospectives.js"></script>
+        <script src="scripts/services/page.js"></script>
+        <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/wordcloud.js"></script>
         <script src="scripts/controllers/retrospectives.js"></script>
         <script src="scripts/controllers/board.js"></script>
