--- a/static/app/index.html
+++ b/static/app/index.html
@@ -48,6 +48,7 @@
         <script src="bower_components/d3-cloud/d3.layout.cloud.js"></script>
         <script src="bower_components/momentjs/moment.js"></script>
         <script src="bower_components/angularjs-modal-service/src/createDialog.js"></script>
+        <script src="bower_components/gremlins.js/gremlins.min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
